<resources>
    <string name="app_name">Friendzz play Squash</string>
    <string name="send">Send</string>
    <string name="add_a_new_user">Do something (1) …</string>
    <string name="write_some_data">Do something (2) …</string>
    <string name="reading_some_data">Do something (3) …</string>
    <string name="friendzzgosquash_main_logo_and_name">FriendzzGoSquash main logo and name</string>
    <string name="email_and_password">Email and Password</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">No user signed in</string>
    <string name="loading">Loading …</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="firebase_status_fmt">FriendzzGoSquash User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="settings">Settings</string>
    <string name="enter">Enter</string>
    <string name="unexpected_error">ERROR: Unexpected app state: User should be signed in !!!</string>
    <string name="set">Set</string>
    <string name="change">Change</string>
    <string name="empty_display_name"><![CDATA[<empty>]]></string>
    <string name="error_wrong_input">Error: Display Name should contain only alphanumeric characters !</string>
</resources>
