<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.peterloos.friendzzgosquash.MainActivity">

    <TextView
        android:id="@+id/textview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Hallo DisplayName [V 0.30]" />

    <LinearLayout
        android:id="@+id/linearlayout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edittext_message"
                android:layout_gravity="center_vertical"
                android:inputType="text"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textAllCaps="false"
                android:id="@+id/button_send"
                android:layout_gravity="end" />

        </LinearLayout>

        <Button
            android:id="@+id/button_adding_a_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_user"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_some_data"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_some_data"
            android:textAllCaps="false" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearlayout_footer"
        android:layout_below="@id/textview_header" />

</RelativeLayout>
